somewhat running after the re-org of the ui form

--- a/cea/default.config
+++ b/cea/default.config
@@ -398,18 +398,18 @@ buildings.type = BuildingsParameter
 buildings.help = Buildings to include in emission timeline generation.
 buildings.category = Emission Timeline Detailed Settings
 
-consider-pv-contributions = false
-consider-pv-contributions.type = BooleanParameter
-consider-pv-contributions.help = True to include PV contributions in emission calculations.
-consider-pv-contributions.category = PV Contributions to Emission Calculations
-
-pv-codes = 
+pv-codes =
 pv-codes.type = ColumnMultiChoiceParameter
-pv-codes.help = Codes of PV panels to consider for emission calculations. These codes are evaluated separately. 
-    This helps with comparing the emission of each pv code.
-    PV panels can help electrical technologies avoid grid electricity consumption, thus reducing emissions caused by grid.
-    However, they might have embodied emissions during manufacturing.
-    CEA does not optimize for PV size. Instead, all PVs computed by PV potential script are considered.
+pv-codes.help = PV panel types to include in emission calculations.
+    Each PV code represents a different panel technology or configuration.
+
+    If empty, no PV contributions will be calculated.
+    If specified, PV will offset building GRID components (per pv-offset-allowance)
+    and/or export to grid (per pv-credit-grid-export).
+
+    PV panels can help offset GRID electricity consumption, thus reducing emissions.
+    However, they have embodied emissions during manufacturing which are also accounted for.
+
     Requires PV potential script to be run beforehand if PV contributions are to be included.
     PV codes are defined in {scenario}\inputs\database\COMPONENTS\CONVERSION\PHOTOVOLTAIC_PANELS.csv.
 pv-codes.locator = get_db4_components_conversion_conversion_technology_csv
@@ -417,21 +417,52 @@ pv-codes.kwargs = conversion_technology=PHOTOVOLTAIC_PANELS
 pv-codes.column = code
 pv-codes.category = PV Contributions to Emission Calculations
 
-pv-offset-allowance = E_sys, Qcs_sys, Qhs_sys, Qww_sys
+pv-offset-allowance =
 pv-offset-allowance.type = MultiChoiceParameter
-pv-offset-allowance.choices = E_sys, Qcs_sys, Qhs_sys, Qww_sys
-pv-offset-allowance.help = Building energy demands that PV electricity generation is allowed to offset.
-    If none or all demands are selected, PV will provide electricity to electrical technologies
-    according to the following priority defined in pv-offset-priority.
+pv-offset-allowance.choices = GRID_a, GRID_l, GRID_v, GRID_ve, GRID_data, GRID_pro, GRID_aux, GRID_cdata, GRID_cre, GRID_hs, GRID_cs, GRID_ww
+pv-offset-allowance.help = GRID electricity components that PV can offset, specified in allocation priority order.
+
+    The ORDER of selection determines allocation priority: PV will offset the first component
+    until its demand is fully met, then move to the second component, and so on.
+
+    Available GRID components:
+    - GRID_a: Appliances and plug loads
+    - GRID_l: Lighting
+    - GRID_v: Ventilation (mechanical ventilation systems)
+    - GRID_ve: Elevators and escalators
+    - GRID_data: Data center equipment
+    - GRID_pro: Industrial processes and production equipment
+    - GRID_aux: Auxiliary equipment (pumps, controls, etc.)
+    - GRID_cdata: Data center cooling
+    - GRID_cre: Refrigeration cooling
+    - GRID_hs: Space heating electrical consumption (heat pumps, electric boilers)
+    - GRID_cs: Space cooling electrical consumption (chillers, heat pumps)
+    - GRID_ww: Domestic hot water electrical consumption (heat pumps, electric water heaters)
+
+    Example: "GRID_l, GRID_a, GRID_hs" means PV will offset lighting first, then appliances,
+    then heating. Components not in this list will not receive PV offsetting.
+
+    If empty (default), ALL components will be offset in the order listed in choices above.
+    This provides a sensible default priority for most buildings.
+
+    Note: Only components that exist in the building's demand profile will be offset.
+    If a selected component has zero demand, it will be skipped automatically.
 pv-offset-allowance.category = PV Contributions to Emission Calculations
 
-pv-offset-priority = E_sys, Qcs_sys, Qhs_sys, Qww_sys
-pv-offset-priority.type = MultiChoiceParameter
-pv-offset-priority.choices = E_sys, Qcs_sys, Qhs_sys, Qww_sys
-pv-offset-priority.help = Priority order for allocating PV electricity generation to offset building energy demands.
-    If a demand is not selected here but in pv-offset-allowance, it will be allocated after all selected demands are met.
-    By default, PV electricity generation is first allocated to E_sys, then Qcs_sys, Qhs_sys, and finally Qww_sys.
-pv-offset-priority.category = PV Contributions to Emission Calculations
+pv-credit-grid-export = true
+pv-credit-grid-export.type = BooleanParameter
+pv-credit-grid-export.help = Whether to credit PV electricity exported to the grid as avoided emissions.
+
+    - True: PV exported to grid (surplus after offsetting building components, or all PV if
+            pv-offset-allowance is empty) is credited as avoided grid emissions.
+
+    - False: Exported PV is logged but NOT counted toward emission reductions (conservative approach).
+
+    Export amount is always reported in output column PV_{code}_offset_grid_export_kgCO2e
+    (which will be 0 when this parameter is False).
+
+    This parameter is only relevant when pv-codes is not empty.
+pv-credit-grid-export.category = PV Contributions to Emission Calculations
 
 grid-carbon-intensity-dataset-csv =
 grid-carbon-intensity-dataset-csv.type = InputFileParameter
