--- a/cea/default.config
+++ b/cea/default.config
@@ -398,24 +398,44 @@ buildings.type = BuildingsParameter
 buildings.help = Buildings to include in emission timeline generation.
 buildings.category = Emission Timeline Detailed Settings
 
+consider-pv-contributions = false
+consider-pv-contributions.type = BooleanParameter
+consider-pv-contributions.help = Master toggle to enable/disable PV contributions in emission calculations.
+
+    - True: Include PV in emission calculations (both embodied and operational offsets)
+    - False: Skip all PV processing (no PV-related columns in output)
+
+    When enabled, PV can offset building GRID demand and/or export to grid based on other settings.
+consider-pv-contributions.category = PV Contributions to Emission Calculations
+
 pv-codes =
 pv-codes.type = ColumnMultiChoiceParameter
 pv-codes.help = PV panel types to include in emission calculations.
     Each PV code represents a different panel technology or configuration.
 
-    If empty, no PV contributions will be calculated.
-    If specified, PV will offset building GRID components (per pv-offset-allowance)
-    and/or export to grid (per pv-credit-grid-export).
+    If empty (default), ALL available PV panels in the database will be included (CEA convention).
+    If specified, only the selected panel codes will be processed.
 
     PV panels can help offset GRID electricity consumption, thus reducing emissions.
     However, they have embodied emissions during manufacturing which are also accounted for.
 
-    Requires PV potential script to be run beforehand if PV contributions are to be included.
+    Only relevant when consider-pv-contributions is True.
+    Requires PV potential script to be run beforehand.
     PV codes are defined in {scenario}\inputs\database\COMPONENTS\CONVERSION\PHOTOVOLTAIC_PANELS.csv.
 pv-codes.locator = get_db4_components_conversion_conversion_technology_csv
 pv-codes.kwargs = conversion_technology=PHOTOVOLTAIC_PANELS
 pv-codes.column = code
 pv-codes.category = PV Contributions to Emission Calculations
+
+pv-offset-building-demand = true
+pv-offset-building-demand.type = BooleanParameter
+pv-offset-building-demand.help = Whether PV electricity offsets building GRID demand before being exported.
+
+    - True: PV offsets building GRID components first (per pv-offset-allowance), surplus exported to grid
+    - False: All PV electricity is exported to grid without offsetting building demand
+
+    Only relevant when consider-pv-contributions is True.
+pv-offset-building-demand.category = PV Contributions to Emission Calculations
 
 pv-offset-allowance =
 pv-offset-allowance.type = MultiChoiceParameter
@@ -442,10 +462,11 @@ pv-offset-allowance.help = GRID electricity components that PV can offset, speci
     Example: "GRID_l, GRID_a, GRID_hs" means PV will offset lighting first, then appliances,
     then heating. Components not in this list will not receive PV offsetting.
 
-    If empty (default), ALL components will be offset in the order listed in choices above.
+    If empty (default), ALL components will be offset in the order listed in choices above (CEA convention).
     This provides a sensible default priority for most buildings.
 
-    Note: Only components that exist in the building's demand profile will be offset.
+    Only relevant when consider-pv-contributions and pv-offset-building-demand are both True.
+    Only components that exist in the building's demand profile will be offset.
     If a selected component has zero demand, it will be skipped automatically.
 pv-offset-allowance.category = PV Contributions to Emission Calculations
 
@@ -453,15 +474,15 @@ pv-credit-grid-export = true
 pv-credit-grid-export.type = BooleanParameter
 pv-credit-grid-export.help = Whether to credit PV electricity exported to the grid as avoided emissions.
 
-    - True: PV exported to grid (surplus after offsetting building components, or all PV if
-            pv-offset-allowance is empty) is credited as avoided grid emissions.
+    - True: PV exported to grid (surplus after offsetting building, or all PV if pv-offset-building-demand
+            is False) is credited as avoided grid emissions.
 
-    - False: Exported PV is logged but NOT counted toward emission reductions (conservative approach).
+    - False: Exported PV is logged in output but NOT counted toward emission reductions (conservative approach).
 
     Export amount is always reported in output column PV_{code}_offset_grid_export_kgCO2e
     (which will be 0 when this parameter is False).
 
-    This parameter is only relevant when pv-codes is not empty.
+    Only relevant when consider-pv-contributions is True.
 pv-credit-grid-export.category = PV Contributions to Emission Calculations
 
 grid-carbon-intensity-dataset-csv =
