Add network-name parameter to test workflows
Added the 'network-name: baseline' parameter to the 'network-layout' and 'thermal-network' steps in both sg_cooling.yml and zug_heating.yml test workflows to ensure explicit network naming.

--- a/cea/tests/workflows/zug_heating.yml
+++ b/cea/tests/workflows/zug_heating.yml
@@ -40,9 +40,11 @@
 - script: photovoltaic-thermal
 - script: network-layout
   parameters:
+    network-name: baseline
     network-type: DH
 - script: thermal-network
   parameters:
+    network-name: baseline
     network-type: DH
     network-model: detailed
     stop-t: 744 # run for one month
