--- a/cea/tests/workflows/sg_cooling.yml
+++ b/cea/tests/workflows/sg_cooling.yml
@@ -40,10 +40,12 @@
 - script: photovoltaic-thermal
 - script: network-layout
   parameters:
+    network-name: baseline
     network-type: DC
     consider-only-buildings-with-demand: off
 - script: thermal-network
   parameters:
+    network-name: baseline
     network-type: DC
     network-model: detailed
     stop-t: 744 # run for one month
