Include additional plot assets in package data
Added patterns to include PNG and YML files from plot directories in the package data. This ensures all necessary plot assets are distributed with the package.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -112,9 +112,11 @@ cea = [
 
     # Web assets
     "interfaces/dashboard/plots/templates/*.html",
-    "plots/*.html",
 
     "plots/naming.csv",
+    "plots/*.html",
+    "plots/**/*.png",
+    "plots/**/*.yml",
 ]
 
 [tool.setuptools.dynamic]
