Add k-nearest building-street connection candidates
Introduces a configurable 'connection_candidates' parameter to allow each building to connect to multiple nearest street points (1-5), improving network optimization quality when using the Kou algorithm. Updates configuration, documentation, and all relevant functions to support k-nearest connections, and enforces that building terminals are leaves with no direct building-to-building edges in the Steiner tree. Mehlhorn algorithm continues to use greedy nearest connection regardless of the parameter.

--- a/cea/default.config
+++ b/cea/default.config
@@ -1666,6 +1666,11 @@ algorithm.choices = kou, mehlhorn
 algorithm.help = 'kou': Higher quality but slower. 'mehlhorn': Faster but less optimal (better for large networks). See networkx.org/documentation steiner_tree
 algorithm.category = Steiner Tree Parameters
 
+connection-candidates = 1
+connection-candidates.type = IntegerParameter
+connection-candidates.help = Number of nearest street connection points to consider per building (1-5). Default 1 is fastest (greedy nearest). Values 3-5 enable better optimization via Kou's metric closure at cost of longer runtime. Only works with Kou algorithm - Mehlhorn will use 1 regardless. Recommended: 1 for speed, 3 for balanced quality/speed, 5 for best quality.
+connection-candidates.category = Steiner Tree Parameters
+
 [multi-criteria]
 generation = 3
 generation.type = IntegerParameter
