--- a/cea/default.config
+++ b/cea/default.config
@@ -400,90 +400,30 @@ buildings.category = Emission Timeline Detailed Settings
 
 consider-pv-contributions = false
 consider-pv-contributions.type = BooleanParameter
-consider-pv-contributions.help = Master toggle to enable/disable PV contributions in emission calculations.
+consider-pv-contributions.help = Whether to include PV offsetting in emission calculations.
+    - True: PV generation offsets grid electricity using net metering (NetGRID = GRID - PV_total)
+    - False: Only building demand is counted (no PV offsetting)
 
-    - True: Include PV in emission calculations (both embodied and operational offsets)
-    - False: Skip all PV processing (no PV-related columns in output)
+    Uses simple net metering approach: total PV generation offsets total GRID demand.
+    Net grid can be negative (building as net exporter).
 
-    When enabled, PV can offset building GRID demand and/or export to grid based on other settings.
-consider-pv-contributions.category = PV Contributions to Emission Calculations
+    Requires PV potential script to be run beforehand.
+consider-pv-contributions.category = PV Offsetting
 
 pv-codes =
 pv-codes.type = ColumnMultiChoiceParameter
 pv-codes.help = PV panel types to include in emission calculations.
     Each PV code represents a different panel technology or configuration.
 
-    If empty (default), ALL available PV panels in the database will be included (CEA convention).
+    If empty (default), ALL available PV panels will be included.
     If specified, only the selected panel codes will be processed.
 
-    PV panels can help offset GRID electricity consumption, thus reducing emissions.
-    However, they have embodied emissions during manufacturing which are also accounted for.
-
     Only relevant when consider-pv-contributions is True.
-    Requires PV potential script to be run beforehand.
     PV codes are defined in {scenario}\inputs\database\COMPONENTS\CONVERSION\PHOTOVOLTAIC_PANELS.csv.
 pv-codes.locator = get_db4_components_conversion_conversion_technology_csv
 pv-codes.kwargs = conversion_technology=PHOTOVOLTAIC_PANELS
 pv-codes.column = code
-pv-codes.category = PV Contributions to Emission Calculations
-
-pv-offset-building-demand = true
-pv-offset-building-demand.type = BooleanParameter
-pv-offset-building-demand.help = Whether PV electricity offsets building GRID demand before being exported.
-
-    - True: PV offsets building GRID components first (per pv-offset-allowance), surplus exported to grid
-    - False: All PV electricity is exported to grid without offsetting building demand
-
-    Only relevant when consider-pv-contributions is True.
-pv-offset-building-demand.category = PV Contributions to Emission Calculations
-
-pv-offset-allowance =
-pv-offset-allowance.type = MultiChoiceParameter
-pv-offset-allowance.choices = GRID_a, GRID_l, GRID_v, GRID_ve, GRID_data, GRID_pro, GRID_aux, GRID_cdata, GRID_cre, GRID_hs, GRID_cs, GRID_ww
-pv-offset-allowance.help = GRID electricity components that PV can offset, specified in allocation priority order.
-
-    The ORDER of selection determines allocation priority: PV will offset the first component
-    until its demand is fully met, then move to the second component, and so on.
-
-    Available GRID components:
-    - GRID_a: Appliances and plug loads
-    - GRID_l: Lighting
-    - GRID_v: Ventilation (mechanical ventilation systems)
-    - GRID_ve: Elevators and escalators
-    - GRID_data: Data center equipment
-    - GRID_pro: Industrial processes and production equipment
-    - GRID_aux: Auxiliary equipment (pumps, controls, etc.)
-    - GRID_cdata: Data center cooling
-    - GRID_cre: Refrigeration cooling
-    - GRID_hs: Space heating electrical consumption (heat pumps, electric boilers)
-    - GRID_cs: Space cooling electrical consumption (chillers, heat pumps)
-    - GRID_ww: Domestic hot water electrical consumption (heat pumps, electric water heaters)
-
-    Example: "GRID_l, GRID_a, GRID_hs" means PV will offset lighting first, then appliances,
-    then heating. Components not in this list will not receive PV offsetting.
-
-    If empty (default), ALL components will be offset in the order listed in choices above (CEA convention).
-    This provides a sensible default priority for most buildings.
-
-    Only relevant when consider-pv-contributions and pv-offset-building-demand are both True.
-    Only components that exist in the building's demand profile will be offset.
-    If a selected component has zero demand, it will be skipped automatically.
-pv-offset-allowance.category = PV Contributions to Emission Calculations
-
-pv-credit-grid-export = true
-pv-credit-grid-export.type = BooleanParameter
-pv-credit-grid-export.help = Whether to credit PV electricity exported to the grid as avoided emissions.
-
-    - True: PV exported to grid (surplus after offsetting building, or all PV if pv-offset-building-demand
-            is False) is credited as avoided grid emissions.
-
-    - False: Exported PV is logged in output but NOT counted toward emission reductions (conservative approach).
-
-    Export amount is always reported in output column PV_{code}_offset_grid_export_kgCO2e
-    (which will be 0 when this parameter is False).
-
-    Only relevant when consider-pv-contributions is True.
-pv-credit-grid-export.category = PV Contributions to Emission Calculations
+pv-codes.category = PV Offsetting
 
 grid-carbon-intensity-dataset-csv =
 grid-carbon-intensity-dataset-csv.type = InputFileParameter
