updating parameters aligning emissions and PE

--- a/cea/default.config
+++ b/cea/default.config
@@ -398,28 +398,16 @@ buildings.type = BuildingsParameter
 buildings.help = Buildings to include in emission timeline generation.
 buildings.category = Emission Timeline Detailed Settings
 
-consider-pv-contributions = false
-consider-pv-contributions.type = BooleanParameter
-consider-pv-contributions.help = Whether to include PV offsetting in emission calculations.
-    - True: PV generation offsets grid electricity using net metering (NetGRID = GRID - PV_total)
-    - False: Only building demand is counted (no PV offsetting)
-
-    Uses simple net metering approach: total PV generation offsets total GRID demand.
-    Net grid can be negative (building as net exporter).
-
-    Requires PV potential script to be run beforehand.
-consider-pv-contributions.category = PV Offsetting
+include-pv = false
+include-pv.type = BooleanParameter
+include-pv.help = True to include PV emission offset columns (negative values = avoided emissions). False to ignore PV contributions.
+    For each PV panel, adds: PV_{code}_GRID_offset_kgCO2e (on-site use) and PV_{code}_GRID_export_kgCO2e (grid export).
+    Original GRID component columns remain unchanged. Ensure Photovoltaic Panels Feature has been executed.
+include-pv.category = PV Offsetting
 
 pv-codes =
 pv-codes.type = ColumnMultiChoiceParameter
-pv-codes.help = PV panel types to include in emission calculations.
-    Each PV code represents a different panel technology or configuration.
-
-    If empty (default), ALL available PV panels will be included.
-    If specified, only the selected panel codes will be processed.
-
-    Only relevant when consider-pv-contributions is True.
-    PV codes are defined in {scenario}\inputs\database\COMPONENTS\CONVERSION\PHOTOVOLTAIC_PANELS.csv.
+pv-codes.help = PV panel types to include in emission calculations. Leave empty to include all available PV panels. Only relevant when include-pv is True.
 pv-codes.locator = get_db4_components_conversion_conversion_technology_csv
 pv-codes.kwargs = conversion_technology=PHOTOVOLTAIC_PANELS
 pv-codes.column = code
