--- a/cea/default.config
+++ b/cea/default.config
@@ -1943,10 +1943,30 @@ x-to-plot.choices = building, building_faceted_by_months, building_faceted_by_se
 x-to-plot.help = Select the column to plot on the X-axis.
 
 [plots-lifecycle-emissions]
-y-metric-to-plot = operation_Qhs_sys, operation_Qww_sys, operation_Qcs_sys, operation_E_sys
-y-metric-to-plot.type = MultiChoiceParameter
-y-metric-to-plot.choices = operation_Qhs_sys, operation_Qww_sys, operation_Qcs_sys, operation_E_sys, production_wall_ag, production_wall_bg, production_wall_part, production_win_ag, production_roof, production_upperside, production_underside, production_floor, production_base, production_technical_systems, biogenic_wall_ag, biogenic_wall_bg, biogenic_wall_part, biogenic_win_ag, biogenic_roof, biogenic_upperside, biogenic_underside, biogenic_floor, biogenic_base, biogenic_technical_systems, demolition_wall_ag, demolition_wall_bg, demolition_wall_part, demolition_win_ag, demolition_roof, demolition_upperside, demolition_underside, demolition_floor, demolition_base, demolition_technical_systems
-y-metric-to-plot.help = Select the metric(s) to plot for the Y-axis. Metrics count all wall types, windows, base, floor (below and above ground).
+y-category-to-plot = operation
+y-category-to-plot.type = MultiChoiceParameter
+y-category-to-plot.choices = operation, production, demolition, biogenic
+y-category-to-plot.help = Select emission category/categories to plot. Combines with operation-services or envelope-components to generate column names.
+
+operation-services = electricity
+operation-services.type = MultiChoiceParameter
+operation-services.choices = electricity, space_heating, space_cooling, dhw, pv_electricity_offset, pv_electricity_export
+operation-services.help = Select operational service(s) to plot. Only relevant when 'operation' is selected in y-category-to-plot.
+    Maps to: electricity→E_sys, space_heating→Qhs_sys, space_cooling→Qcs_sys, dhw→Qww_sys.
+    For pv_electricity_offset/export, pv-codes must also be specified.
+
+envelope-components =
+envelope-components.type = MultiChoiceParameter
+envelope-components.choices = wall_ag, wall_bg, wall_part, win_ag, roof, upperside, underside, floor, base, technical_systems, pv
+envelope-components.help = Select building envelope component(s) to plot. Relevant when production/demolition/biogenic selected in y-category-to-plot.
+    For 'pv' component, pv-codes must also be specified.
+
+pv-codes =
+pv-codes.type = ColumnMultiChoiceParameter
+pv-codes.help = PV panel type(s) to include in plot. Only relevant when pv_electricity_offset/pv_electricity_export in operation-services OR pv in envelope-components is selected.
+pv-codes.locator = get_db4_components_conversion_conversion_technology_csv
+pv-codes.kwargs = conversion_technology=PHOTOVOLTAIC_PANELS
+pv-codes.column = code
 
 y-metric-unit = kgCO2e
 y-metric-unit.type = ChoiceParameter
