pv related pareameters showing

--- a/cea/default.config
+++ b/cea/default.config
@@ -1943,19 +1943,19 @@ x-to-plot.choices = building, building_faceted_by_months, building_faceted_by_se
 x-to-plot.help = Select the column to plot on the X-axis.
 
 [plots-lifecycle-emissions]
-y-category-to-plot = operation
+y-category-to-plot = operation, production, demolition, biogenic
 y-category-to-plot.type = MultiChoiceParameter
 y-category-to-plot.choices = operation, production, demolition, biogenic
 y-category-to-plot.help = Select emission category/categories to plot. Combines with operation-services or envelope-components to generate column names.
 
-operation-services = electricity
+operation-services = electricity, space_heating, space_cooling, dhw, pv_electricity_offset, pv_electricity_export
 operation-services.type = MultiChoiceParameter
 operation-services.choices = electricity, space_heating, space_cooling, dhw, pv_electricity_offset, pv_electricity_export
 operation-services.help = Select operational service(s) to plot. Only relevant when 'operation' is selected in y-category-to-plot.
     Maps to: electricity→E_sys, space_heating→Qhs_sys, space_cooling→Qcs_sys, dhw→Qww_sys.
     For pv_electricity_offset/export, pv-codes must also be specified.
 
-envelope-components =
+envelope-components = wall_ag, wall_bg, wall_part, win_ag, roof, upperside, underside, floor, base, technical_systems, pv
 envelope-components.type = MultiChoiceParameter
 envelope-components.choices = wall_ag, wall_bg, wall_part, win_ag, roof, upperside, underside, floor, base, technical_systems, pv
 envelope-components.help = Select building envelope component(s) to plot. Relevant when production/demolition/biogenic selected in y-category-to-plot.
