stacked-bar working

--- a/cea/default.config
+++ b/cea/default.config
@@ -1959,14 +1959,14 @@ envelope-components = wall_ag, wall_bg, wall_part, win_ag, roof, upperside, unde
 envelope-components.type = MultiChoiceParameter
 envelope-components.choices = wall_ag, wall_bg, wall_part, win_ag, roof, upperside, underside, floor, base, technical_systems, pv
 envelope-components.help = Select building envelope component(s) to plot. Relevant when production/demolition/biogenic selected in y-category-to-plot.
-    For 'pv' component, pv-codes must also be specified.
+    For 'pv' component, pv-code must also be specified.
 
-pv-codes =
-pv-codes.type = ColumnMultiChoiceParameter
-pv-codes.help = PV panel type(s) to include in plot. Only relevant when pv_electricity_offset/pv_electricity_export in operation-services OR pv in envelope-components is selected.
-pv-codes.locator = get_db4_components_conversion_conversion_technology_csv
-pv-codes.kwargs = conversion_technology=PHOTOVOLTAIC_PANELS
-pv-codes.column = code
+pv-code =
+pv-code.type = ColumnChoiceParameter
+pv-code.help = PV panel type to include in plot. Only relevant when pv_electricity_offset/pv_electricity_export in operation-services OR pv in envelope-components is selected.
+pv-code.locator = get_db4_components_conversion_conversion_technology_csv
+pv-code.kwargs = conversion_technology=PHOTOVOLTAIC_PANELS
+pv-code.column = code
 
 y-metric-unit = kgCO2e
 y-metric-unit.type = ChoiceParameter
