Support multiple network types in thermal network scripts
Updated configuration to allow selection of multiple network types (DH, DC) using MultiChoiceParameter. Refactored simplified thermal network functions to process multiple network types and improved error handling. Adjusted script parameters and fixed handling of empty graphs in network layout utilities.

--- a/cea/default.config
+++ b/cea/default.config
@@ -945,8 +945,8 @@ network-name =
 network-name.type = NetworkLayoutChoiceParameter
 network-name.help = Select an existing network layout to simulate. Networks are created by the 'network-layout' script. Dropdown lists available networks for the selected network type.
 
-network-type = DH
-network-type.type = ChoiceParameter
+network-type = DH, DC
+network-type.type = MultiChoiceParameter
 network-type.choices = DH, DC
 network-type.help = Type of district network to be simulated: "DH" (district heating) or "DC" (district cooling).
 
