timeline working with neg

--- a/cea/default.config
+++ b/cea/default.config
@@ -2025,21 +2025,30 @@ plot-type.type = ChoiceParameter
 plot-type.choices = line_cumulative, line_net_cumulative, shaded_stack_cumulative, shaded_stack_percentage_cumulative
 plot-type.help = Select the type of plot. For plot_type = line_net_cumulative, Net emissions = Operation + Production + Demolition – Biogenic – PV. This net emissions estimate includes operational emissions, embodied emissions from production and demolition, and offsets from on-site PV generation and biogenic carbon stored in long-life bio-based materials. The PV offset assumes 100% self-consumption of electricity using current grid carbon factors. Biogenic carbon is treated as a temporary offset; no end-of-life release is assumed. No future grid decarbonisation or external offsets are assumed.
 
-y-metric-to-plot = operation_Qhs_sys, operation_Qww_sys, operation_Qcs_sys, operation_E_sys, production_wall_ag, production_wall_bg, production_wall_part, production_win_ag, production_roof, production_upperside, production_underside, production_floor, production_base, production_technical_systems, biogenic_wall_ag, biogenic_wall_bg, biogenic_wall_part, biogenic_win_ag, biogenic_roof, biogenic_upperside, biogenic_underside, biogenic_floor, biogenic_base, biogenic_technical_systems, demolition_wall_ag, demolition_wall_bg, demolition_wall_part, demolition_win_ag, demolition_roof, demolition_upperside, demolition_underside, demolition_floor, demolition_base, demolition_technical_systems
-y-metric-to-plot.type = MultiChoiceParameter
-y-metric-to-plot.choices = operation_Qhs_sys, operation_Qww_sys, operation_Qcs_sys, operation_E_sys, production_wall_ag, production_wall_bg, production_wall_part, production_win_ag, production_roof, production_upperside, production_underside, production_floor, production_base, production_technical_systems, biogenic_wall_ag, biogenic_wall_bg, biogenic_wall_part, biogenic_win_ag, biogenic_roof, biogenic_upperside, biogenic_underside, biogenic_floor, biogenic_base, biogenic_technical_systems, demolition_wall_ag, demolition_wall_bg, demolition_wall_part, demolition_win_ag, demolition_roof, demolition_upperside, demolition_underside, demolition_floor, demolition_base, demolition_technical_systems
-y-metric-to-plot.help = Select the metric(s) to plot for the Y-axis. Metrics count all wall types, windows, base, floor (below and above ground).
-y-metric-to-plot.category = Y-axis settings
+y-category-to-plot = operation, production, demolition, biogenic
+y-category-to-plot.type = MultiChoiceParameter
+y-category-to-plot.choices = operation, production, demolition, biogenic
+y-category-to-plot.help = Select emission category/categories to plot. Combines with operation-services or envelope-components to generate column names.
+y-category-to-plot.category = Y-axis settings
 
-pv-code = 
+operation-services = electricity, space_heating, space_cooling, dhw, pv_electricity_offset, pv_electricity_export
+operation-services.type = MultiChoiceParameter
+operation-services.choices = electricity, space_heating, space_cooling, dhw, pv_electricity_offset, pv_electricity_export
+operation-services.help = Select operational service(s) to plot. Only relevant when 'operation' is selected in y-category-to-plot.
+    Maps to: electricity→E_sys, space_heating→Qhs_sys, space_cooling→Qcs_sys, dhw→Qww_sys.
+    For pv_electricity_offset/export, pv-code must also be specified.
+operation-services.category = Y-axis settings
+
+envelope-components = wall_ag, wall_bg, wall_part, win_ag, roof, upperside, underside, floor, base, technical_systems, pv
+envelope-components.type = MultiChoiceParameter
+envelope-components.choices = wall_ag, wall_bg, wall_part, win_ag, roof, upperside, underside, floor, base, technical_systems, pv
+envelope-components.help = Select building envelope component(s) to plot. Relevant when production/demolition/biogenic selected in y-category-to-plot.
+    For 'pv' component, pv-code must also be specified.
+envelope-components.category = Y-axis settings
+
+pv-code =
 pv-code.type = ColumnChoiceParameter
-pv-code.help = Codes of PV panel to consider for emission calculations. Only one PV code can be selected at a time.
-    For different PV codes, please run the plot multiple times.
-    PV panels can help electrical technologies avoid grid electricity consumption, thus reducing emissions caused by grid.
-    However, they might have embodied emissions during manufacturing.
-    CEA does not optimize for PV size. Instead, all PVs computed by PV potential script are considered.
-    Requires PV potential script to be run beforehand if PV contributions are to be included.
-    PV code is defined in {scenario}\inputs\database\COMPONENTS\CONVERSION\PHOTOVOLTAIC_PANELS.csv.
+pv-code.help = PV panel type to include in plot. Only relevant when pv_electricity_offset/pv_electricity_export in operation-services OR pv in envelope-components is selected.
 pv-code.locator = get_db4_components_conversion_conversion_technology_csv
 pv-code.kwargs = conversion_technology=PHOTOVOLTAIC_PANELS
 pv-code.column = code
