--- a/cea/default.config
+++ b/cea/default.config
@@ -1953,7 +1953,7 @@ operation-services.type = MultiChoiceParameter
 operation-services.choices = electricity, space_heating, space_cooling, dhw, pv_electricity_offset, pv_electricity_export
 operation-services.help = Select operational service(s) to plot. Only relevant when 'operation' is selected in y-category-to-plot.
     Maps to: electricity→E_sys, space_heating→Qhs_sys, space_cooling→Qcs_sys, dhw→Qww_sys.
-    For pv_electricity_offset/export, pv-codes must also be specified.
+    For pv_electricity_offset/export, pv-code must also be specified.
 
 envelope-components = wall_ag, wall_bg, wall_part, win_ag, roof, upperside, underside, floor, base, technical_systems, pv
 envelope-components.type = MultiChoiceParameter
@@ -1990,15 +1990,26 @@ y-metric-to-plot.type = MultiChoiceParameter
 y-metric-to-plot.choices = Qhs_sys, Qww_sys, Qcs_sys, E_sys, Qhs_sys_NATURALGAS, Qhs_sys_BIOGAS, Qhs_sys_SOLAR, Qhs_sys_DRYBIOMASS, Qhs_sys_WETBIOMASS, Qhs_sys_GRID, Qhs_sys_COAL, Qhs_sys_WOOD, Qhs_sys_OIL, Qhs_sys_HYDROGEN, Qhs_sys_NONE, Qww_sys_NATURALGAS, Qww_sys_BIOGAS, Qww_sys_SOLAR, Qww_sys_DRYBIOMASS, Qww_sys_WETBIOMASS, Qww_sys_GRID, Qww_sys_COAL, Qww_sys_WOOD, Qww_sys_OIL, Qww_sys_HYDROGEN, Qww_sys_NONE, Qcs_sys_NATURALGAS, Qcs_sys_BIOGAS, Qcs_sys_SOLAR, Qcs_sys_DRYBIOMASS, Qcs_sys_WETBIOMASS, Qcs_sys_GRID, Qcs_sys_COAL, Qcs_sys_WOOD, Qcs_sys_OIL, Qcs_sys_HYDROGEN, Qcs_sys_NONE, E_sys_NATURALGAS, E_sys_BIOGAS, E_sys_SOLAR, E_sys_DRYBIOMASS, E_sys_WETBIOMASS, E_sys_GRID, E_sys_COAL, E_sys_WOOD, E_sys_OIL, E_sys_HYDROGEN, E_sys_NONE
 y-metric-to-plot.help = Select the metric(s) to plot for the Y-axis.
 
-pv-code = 
+y-category-to-plot = services, energy_carriers
+y-category-to-plot.type = MultiChoiceParameter
+y-category-to-plot.choices = services, energy_carriers
+y-category-to-plot.help = Select emission category/categories to plot. Combines with operation-services or envelope-components to generate column names.
+
+operation-services = electricity, space_heating, space_cooling, dhw, pv_electricity_offset, pv_electricity_export
+operation-services.type = MultiChoiceParameter
+operation-services.choices = electricity, space_heating, space_cooling, dhw, pv_electricity_offset, pv_electricity_export
+operation-services.help = Select operational service(s) to plot. Only relevant when 'operation_services' is selected in y-category-to-plot.
+    Maps to: electricity→E_sys, space_heating→Qhs_sys, space_cooling→Qcs_sys, dhw→Qww_sys.
+    For pv_electricity_offset/export, pv-code must also be specified.
+
+energy_carriers = grid, natural_gas, biogas, dry_biomass, wet_biomass, coal, wood, oil, hydrogen
+energy_carriers.type = MultiChoiceParameter
+energy_carriers.choices = grid, natural_gas, biogas, dry_biomass, wet_biomass, coal, wood, oil, hydrogen
+energy_carriers.help = Select energy carrier(s) to plot. Only relevant when 'energy_carriers' is selected in y-category-to-plot.
+
+pv-code =
 pv-code.type = ColumnChoiceParameter
-pv-code.help = Codes of PV panel to consider for emission calculations. Only one PV code can be selected at a time.
-    For different PV codes, please run the plot multiple times.
-    PV panels can help electrical technologies avoid grid electricity consumption, thus reducing emissions caused by grid.
-    However, they might have embodied emissions during manufacturing.
-    CEA does not optimize for PV size. Instead, all PVs computed by PV potential script are considered.
-    Requires PV potential script to be run beforehand if PV contributions are to be included.
-    PV code is defined in {scenario}\inputs\database\COMPONENTS\CONVERSION\PHOTOVOLTAIC_PANELS.csv.
+pv-code.help = PV panel type to include in plot. Only relevant when pv_electricity_offset/pv_electricity_export in operation-services OR pv in envelope-components is selected.
 pv-code.locator = get_db4_components_conversion_conversion_technology_csv
 pv-code.kwargs = conversion_technology=PHOTOVOLTAIC_PANELS
 pv-code.column = code
