bar plot working

--- a/cea/default.config
+++ b/cea/default.config
@@ -1985,31 +1985,29 @@ x-to-plot.choices = building, building_faceted_by_construction_type, building_fa
 x-to-plot.help = Select the column to plot on the X-axis.
 
 [plots-operational-emissions]
-y-metric-to-plot = Qhs_sys, Qww_sys, Qcs_sys, E_sys
-y-metric-to-plot.type = MultiChoiceParameter
-y-metric-to-plot.choices = Qhs_sys, Qww_sys, Qcs_sys, E_sys, Qhs_sys_NATURALGAS, Qhs_sys_BIOGAS, Qhs_sys_SOLAR, Qhs_sys_DRYBIOMASS, Qhs_sys_WETBIOMASS, Qhs_sys_GRID, Qhs_sys_COAL, Qhs_sys_WOOD, Qhs_sys_OIL, Qhs_sys_HYDROGEN, Qhs_sys_NONE, Qww_sys_NATURALGAS, Qww_sys_BIOGAS, Qww_sys_SOLAR, Qww_sys_DRYBIOMASS, Qww_sys_WETBIOMASS, Qww_sys_GRID, Qww_sys_COAL, Qww_sys_WOOD, Qww_sys_OIL, Qww_sys_HYDROGEN, Qww_sys_NONE, Qcs_sys_NATURALGAS, Qcs_sys_BIOGAS, Qcs_sys_SOLAR, Qcs_sys_DRYBIOMASS, Qcs_sys_WETBIOMASS, Qcs_sys_GRID, Qcs_sys_COAL, Qcs_sys_WOOD, Qcs_sys_OIL, Qcs_sys_HYDROGEN, Qcs_sys_NONE, E_sys_NATURALGAS, E_sys_BIOGAS, E_sys_SOLAR, E_sys_DRYBIOMASS, E_sys_WETBIOMASS, E_sys_GRID, E_sys_COAL, E_sys_WOOD, E_sys_OIL, E_sys_HYDROGEN, E_sys_NONE
-y-metric-to-plot.help = Select the metric(s) to plot for the Y-axis.
-
-y-category-to-plot = services, energy_carriers
+y-category-to-plot = operation, energy_carrier
 y-category-to-plot.type = MultiChoiceParameter
-y-category-to-plot.choices = services, energy_carriers
-y-category-to-plot.help = Select emission category/categories to plot. Combines with operation-services or envelope-components to generate column names.
+y-category-to-plot.choices = operation, energy_carrier
+y-category-to-plot.help = Select emission category/categories to plot.
+    operation: Aggregated by service (Qhs_sys, Qww_sys, Qcs_sys, E_sys)
+    energy_carrier: Aggregated by carrier (NATURALGAS, BIOGAS, GRID, etc.)
 
 operation-services = electricity, space_heating, space_cooling, dhw, pv_electricity_offset, pv_electricity_export
 operation-services.type = MultiChoiceParameter
 operation-services.choices = electricity, space_heating, space_cooling, dhw, pv_electricity_offset, pv_electricity_export
-operation-services.help = Select operational service(s) to plot. Only relevant when 'operation_services' is selected in y-category-to-plot.
+operation-services.help = Select operational service(s) to plot. Only relevant when 'operation' is selected in y-category-to-plot.
     Maps to: electricity→E_sys, space_heating→Qhs_sys, space_cooling→Qcs_sys, dhw→Qww_sys.
     For pv_electricity_offset/export, pv-code must also be specified.
 
-energy_carriers = grid, natural_gas, biogas, dry_biomass, wet_biomass, coal, wood, oil, hydrogen
-energy_carriers.type = MultiChoiceParameter
-energy_carriers.choices = grid, natural_gas, biogas, dry_biomass, wet_biomass, coal, wood, oil, hydrogen
-energy_carriers.help = Select energy carrier(s) to plot. Only relevant when 'energy_carriers' is selected in y-category-to-plot.
+energy-carriers = GRID, NATURALGAS, BIOGAS, DRYBIOMASS, WETBIOMASS, COAL, WOOD, OIL, HYDROGEN
+energy-carriers.type = MultiChoiceParameter
+energy-carriers.choices = GRID, NATURALGAS, BIOGAS, DRYBIOMASS, WETBIOMASS, COAL, WOOD, OIL, HYDROGEN
+energy-carriers.help = Select energy carrier(s) to plot. Only relevant when 'energy_carrier' is selected in y-category-to-plot.
+    Aggregates emissions across all services for the selected carrier(s).
 
 pv-code =
 pv-code.type = ColumnChoiceParameter
-pv-code.help = PV panel type to include in plot. Only relevant when pv_electricity_offset/pv_electricity_export in operation-services OR pv in envelope-components is selected.
+pv-code.help = PV panel type to include in plot. Only relevant when pv_electricity_offset/pv_electricity_export in operation-services is selected.
 pv-code.locator = get_db4_components_conversion_conversion_technology_csv
 pv-code.kwargs = conversion_technology=PHOTOVOLTAIC_PANELS
 pv-code.column = code
