--- a/cea/scripts.yml
+++ b/cea/scripts.yml
@@ -326,7 +326,7 @@ Life Cycle Analysis:
       - Net grid electricity after PV offsetting (can be negative for net exporters)
       - Normalised metrics per floor area (MJ/m²/year)
       - Hourly timeseries for GRID and PV (other carriers use constant PEF)
-    interfaces: [cli, dashboard]
+    interfaces: [cli]
     module: cea.analysis.lca.primary_energy
     parameters: ['general:scenario', primary-energy]
     input-files:
