--- a/cea/default.config
+++ b/cea/default.config
@@ -1663,8 +1663,14 @@ algorithm.category = Steiner Tree Parameters
 
 connection-candidates = 3
 connection-candidates.type = IntegerParameter
-connection-candidates.help = Number of nearest street connection points to consider per building (1-5). Default 1 is fastest (greedy nearest). Values 3-5 enable better optimization via Kou's metric closure at cost of longer runtime. Only works with Kou algorithm - Mehlhorn will use 1 regardless. Recommended: 1 for speed, 3 for balanced quality/speed, 5 for best quality.
+connection-candidates.help = Number of nearest street connection points to consider per building (1-5). Default 3 provides balanced quality/speed. Value 1 is fastest (greedy nearest). Values 4-5 enable better optimization via Kou's metric closure at cost of longer runtime. Only works with Kou algorithm - Mehlhorn will use 1 regardless.
 connection-candidates.category = Steiner Tree Parameters
+
+snap-tolerance =
+snap-tolerance.type = RealParameter
+snap-tolerance.nullable = true
+snap-tolerance.help = Maximum distance (in meters) to snap near-miss street endpoints and building connections. Leave blank to use default (0.5m from SNAP_TOLERANCE constant). Typical range: 0.3-2.0m. Warning issued if value is too large relative to street segment lengths.
+snap-tolerance.category = Steiner Tree Parameters
 
 [multi-criteria]
 generation = 3
