--- a/cea/default.config
+++ b/cea/default.config
@@ -1255,6 +1255,15 @@ crossover-method-continuous.help = Crossover method for continuous variables (pl
 crossover-method-continuous.category = Advanced
 
 [optimization-new]
+network-name =
+network-name.type = NetworkLayoutChoiceParameter
+network-name.help = Select an existing network layout for the base case assessment. Networks are created by the 'network-layout' script. Dropdown lists available networks for the selected network type.
+
+network-type = DH
+network-type.type = ChoiceParameter
+network-type.choices = DH, DC
+network-type.help = Type of district network to be simulated: "DH" (district heating) or "DC" (district cooling).
+
 buildings =
 buildings.type = BuildingsParameter
 buildings.help = List of buildings included in the district-scale Supply System Optimisation. Leave blank to include all all buildings.
