--- a/cea/default.config
+++ b/cea/default.config
@@ -378,16 +378,14 @@ overheating-warning.help = Set to False to bypass overheating warning.
 overheating-warning.category = Advanced
 
 [system-costs]
-network-name-dc =
-network-name-dc.type = NetworkLayoutChoiceParameter
-network-name-dc.nullable = true
-network-name-dc.help = Select an existing DC (district cooling) network to calculate costs. Leave empty to skip DC network costs. Networks are created by the 'thermal-network:part 2' script.
+network-name =
+network-name.type = NetworkLayoutChoiceParameter
+network-name.help = Select an existing network layout for the cost calculation. Networks are created by the 'thermal-network' script (part 1 and part 2 must be completed).
 
-network-name-dh =
-network-name-dh.type = NetworkLayoutChoiceParameter
-network-name-dh.nullable = true
-network-name-dh.help = Select an existing DH (district heating) network to calculate costs. Leave empty to skip DH network costs. Networks are created by the 'thermal-network:part 2' script.
-
+network-type = DH
+network-type.type = MultiChoiceParameter
+network-type.choices = DH, DC
+network-type.help = Type(s) of district network to calculate costs for: "DH" (district heating), "DC" (district cooling), or both. Select multiple by separating with commas.
 
 [emissions]
 year-end =
