--- a/cea/default.config
+++ b/cea/default.config
@@ -387,6 +387,21 @@ network-type.type = MultiChoiceParameter
 network-type.choices = DH, DC
 network-type.help = Type(s) of district network to calculate costs for: "DH" (district heating), "DC" (district cooling), or both. Select multiple by separating with commas.
 
+cooling-components = VAPOR_COMPRESSION_CHILLERS
+cooling-components.type = MultiChoiceParameter
+cooling-components.choices = ABSORPTION_CHILLERS, VAPOR_COMPRESSION_CHILLERS, UNITARY_AIR_CONDITIONERS
+cooling-components.help = Technologies to consider for district cooling plants. Order indicates priority for deployment.
+
+heating-components = BOILERS
+heating-components.type = MultiChoiceParameter
+heating-components.choices = BOILERS, COGENERATION_PLANTS, HEAT_PUMPS
+heating-components.help = Technologies to consider for district heating plants. Order indicates priority for deployment.
+
+heat-rejection-components = COOLING_TOWERS
+heat-rejection-components.type = MultiChoiceParameter
+heat-rejection-components.choices = COOLING_TOWERS
+heat-rejection-components.help = Technologies used for heat rejection (typically cooling towers for chillers).
+
 [emissions]
 year-end =
 year-end.type = IntegerParameter
