--- a/cea/default.config
+++ b/cea/default.config
@@ -387,20 +387,41 @@ network-type.type = MultiChoiceParameter
 network-type.choices = DH, DC
 network-type.help = Type(s) of district network to calculate costs for: "DH" (district heating), "DC" (district cooling), or both. Select multiple by separating with commas.
 
-cooling-components = VAPOR_COMPRESSION_CHILLERS
-cooling-components.type = MultiChoiceParameter
-cooling-components.choices = ABSORPTION_CHILLERS, VAPOR_COMPRESSION_CHILLERS, UNITARY_AIR_CONDITIONERS
-cooling-components.help = Technologies to consider for district cooling plants. Order indicates priority for deployment.
+supply-type-cs =
+supply-type-cs.type = DistrictSupplyTypeParameter
+supply-type-cs.supply-category = SUPPLY_COOLING
+supply-type-cs.help = District cooling supply system type for baseline cost calculations. Only district-scale options are shown. Select "Use component settings below" to use the component parameters instead of a predefined assembly.
+supply-type-cs.category = Thermal Network Settings
+
+supply-type-hs =
+supply-type-hs.type = DistrictSupplyTypeParameter
+supply-type-hs.supply-category = SUPPLY_HEATING
+supply-type-hs.help = District heating supply system type for baseline cost calculations. Only district-scale options are shown. Select "Use component settings below" to use the component parameters instead of a predefined assembly.
+supply-type-hs.category = Thermal Network Settings
+
+supply-type-dhw =
+supply-type-dhw.type = DistrictSupplyTypeParameter
+supply-type-dhw.supply-category = SUPPLY_HOTWATER
+supply-type-dhw.help = District domestic hot water supply system type for baseline cost calculations. Only district-scale options are shown. Select "Use component settings below" to use the component parameters instead of a predefined assembly.
+supply-type-dhw.category = Thermal Network Settings
+
+cooling-components = ABSORPTION_CHILLERS
+cooling-components.type = ChoiceParameter
+cooling-components.choices = ABSORPTION_CHILLERS, VAPOR_COMPRESSION_CHILLERS
+cooling-components.help = Technologies to consider for district cooling plants. Order indicates priority for deployment. Used as fallback when supply-type-cs is not set (e.g., when database lacks district cooling assemblies).
+cooling-components.category = Thermal Network Settings
 
 heating-components = BOILERS
-heating-components.type = MultiChoiceParameter
+heating-components.type = ChoiceParameter
 heating-components.choices = BOILERS, COGENERATION_PLANTS, HEAT_PUMPS
-heating-components.help = Technologies to consider for district heating plants. Order indicates priority for deployment.
+heating-components.help = Technologies to consider for district heating plants. Order indicates priority for deployment. Used as fallback when supply-type-hs is not set (e.g., when database lacks district heating assemblies).
+heating-components.category = Thermal Network Settings
 
 heat-rejection-components = COOLING_TOWERS
-heat-rejection-components.type = MultiChoiceParameter
+heat-rejection-components.type = ChoiceParameter
 heat-rejection-components.choices = COOLING_TOWERS
-heat-rejection-components.help = Technologies used for heat rejection (typically cooling towers for chillers).
+heat-rejection-components.help = Technologies used for heat rejection. Used as fallback when supply assemblies don't specify heat rejection components.
+heat-rejection-components.category = Thermal Network Settings
 
 [emissions]
 year-end =
