--- a/cea/default.config
+++ b/cea/default.config
@@ -405,22 +405,22 @@ supply-type-dhw.supply-category = SUPPLY_HOTWATER
 supply-type-dhw.help = District domestic hot water supply system type for baseline cost calculations. Only district-scale options are shown. Select "Use component settings below" to use the component parameters instead of a predefined assembly.
 supply-type-dhw.category = Thermal Network Settings
 
-cooling-components = ABSORPTION_CHILLERS
-cooling-components.type = ChoiceParameter
-cooling-components.choices = ABSORPTION_CHILLERS, VAPOR_COMPRESSION_CHILLERS
-cooling-components.help = Technologies to consider for district cooling plants. Order indicates priority for deployment. Used as fallback when supply-type-cs is not set (e.g., when database lacks district cooling assemblies).
+cooling-components = VAPOR_COMPRESSION_CHILLERS, ABSORPTION_CHILLERS
+cooling-components.type = MultiChoiceParameter
+cooling-components.choices = VAPOR_COMPRESSION_CHILLERS, ABSORPTION_CHILLERS
+cooling-components.help = Technologies to consider for district cooling plants. Order indicates priority for deployment. Used both as fallback when supply-type-cs is not set AND to determine component activation order when SUPPLY assemblies are used.
 cooling-components.category = Thermal Network Settings
 
-heating-components = BOILERS
-heating-components.type = ChoiceParameter
-heating-components.choices = BOILERS, COGENERATION_PLANTS, HEAT_PUMPS
-heating-components.help = Technologies to consider for district heating plants. Order indicates priority for deployment. Used as fallback when supply-type-hs is not set (e.g., when database lacks district heating assemblies).
+heating-components = BOILERS, HEAT_PUMPS
+heating-components.type = MultiChoiceParameter
+heating-components.choices = BOILERS, HEAT_PUMPS, COGENERATION_PLANTS
+heating-components.help = Technologies to consider for district heating plants. Order indicates priority for deployment. Used both as fallback when supply-type-hs is not set AND to determine component activation order when SUPPLY assemblies are used.
 heating-components.category = Thermal Network Settings
 
-heat-rejection-components = COOLING_TOWERS
-heat-rejection-components.type = ChoiceParameter
-heat-rejection-components.choices = COOLING_TOWERS
-heat-rejection-components.help = Technologies used for heat rejection. Used as fallback when supply assemblies don't specify heat rejection components.
+heat-rejection-components = COOLING_TOWERS, HEAT_EXCHANGERS
+heat-rejection-components.type = MultiChoiceParameter
+heat-rejection-components.choices = COOLING_TOWERS, HEAT_EXCHANGERS
+heat-rejection-components.help = Technologies used for heat rejection. Used both as fallback when supply assemblies don't specify heat rejection components AND to determine component activation order when SUPPLY assemblies are used.
 heat-rejection-components.category = Thermal Network Settings
 
 [emissions]
