removing heat exchangers as heat reject component

--- a/cea/default.config
+++ b/cea/default.config
@@ -417,9 +417,9 @@ heating-components.choices = BOILERS, HEAT_PUMPS, COGENERATION_PLANTS
 heating-components.help = Technologies to consider for district heating plants. Order indicates priority for deployment. Used both as fallback when supply-type-hs is not set AND to determine component activation order when SUPPLY assemblies are used.
 heating-components.category = Thermal Network Settings
 
-heat-rejection-components = COOLING_TOWERS, HEAT_EXCHANGERS
+heat-rejection-components = COOLING_TOWERS
 heat-rejection-components.type = MultiChoiceParameter
-heat-rejection-components.choices = COOLING_TOWERS, HEAT_EXCHANGERS
+heat-rejection-components.choices = COOLING_TOWERS
 heat-rejection-components.help = Technologies used for heat rejection. Used both as fallback when supply assemblies don't specify heat rejection components AND to determine component activation order when SUPPLY assemblies are used.
 heat-rejection-components.category = Thermal Network Settings
 
