--- a/cea/default.config
+++ b/cea/default.config
@@ -386,6 +386,7 @@ network-type = DH
 network-type.type = MultiChoiceParameter
 network-type.choices = DH, DC
 network-type.help = Type(s) of district network to calculate costs for: "DH" (district heating), "DC" (district cooling), or both. Select multiple by separating with commas.
+network-type.category = Thermal Network Settings
 
 supply-type-cs =
 supply-type-cs.type = DistrictSupplyTypeParameter
